--- a/web_dev/CareConnect_index.HTML
+++ b/web_dev/CareConnect_index.HTML
@@ -96,7 +96,7 @@
         .template-cards {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
+            gap: 30px;
             justify-content: space-around;
         }
 
@@ -184,7 +184,7 @@
     </div>
     <div class="blue-strip">
         <h2>The Intelligent Health Chatbot</h2>
-        <p>As endorsed by top healthcare professionals</p>
+        <h3>As endorsed by top healthcare professionals</h3>
     </div>
     <div class="template-cards">
         <div class="card">
