--- a/app/public/index.html
+++ b/app/public/index.html
@@ -177,6 +177,7 @@
             <h2>Revolutionize your health with Care Connect, the health bot assistant that swiftly identifies your health concerns.</h2>
             <p>Get reliable medical information and guidance from our AI assistant. Remember, this is not a replacement for professional medical advice.</p>
             <button class="sign-up-btn">Sign up today</button>
+            <button class="sign-up-btn" onclick="location.href='CareConnect_chat.html'">Chat with CareConnect</button>
         </div>
         <div class="image-section">
             <img src="CareConnectImages/HPIdea1.jpg" alt="Care Connect App Screens">
