--- a/app/public/CareConnect_AboutUs.HTML
+++ b/app/public/CareConnect_AboutUs.HTML
@@ -287,7 +287,7 @@ CareConnect is the place you can trust. We're here to take care of you!</p>
     </div>
 
     <div class="team-member">
-        <img src="AubreyLister.jpg" alt="Aubrey Lister">
+        <img src="CareConnectImages/AubreyLister.jpg" alt="Aubrey Lister">
         <h3>Aubrey Lister</h3>
         <p>Front-end Lead Developer</p>
 
@@ -299,7 +299,7 @@ CareConnect is the place you can trust. We're here to take care of you!</p>
     </div>
 
     <div class="team-member">
-        <img src="ZeroNelsonImg.jpg" alt="Zero Nelson">
+        <img src="CareConnectImages/ZeroNelsonImg.jpg" alt="Zero Nelson">
         <h3>Zero Nelson</h3>
         <p>Data Analyst</p>
 
@@ -311,7 +311,7 @@ CareConnect is the place you can trust. We're here to take care of you!</p>
     </div>
 
     <div class="team-member">
-        <img src="LindseyLittlejohnImg.jpeg" alt="Lindsey Littlejohn">
+        <img src="CareConnectImages/LindseyLittlejohnImg.jpeg" alt="Lindsey Littlejohn">
         <h3>Lindsey Littlejohn</h3>
         <p>Front-end Developer</p>
 
