--- a/app/public/forgotpassword.html
+++ b/app/public/forgotpassword.html
@@ -124,8 +124,8 @@ function resetPassword() {
 const email = document.getElementById('email').value;
 const confirmation = document.getElementById('confirmation');
 if (email) {
-confirmation.textContent = "If this email is registered, a reset link has been
-sent.";
+confirmation.textContent = "If this email is registered, a reset link has beenn
+sent.": 
 confirmation.style.color = "green";
 } else {
 confirmation.textContent = "Please enter a valid email address.";
