--- a/app/public/signup.html
+++ b/app/public/signup.html
@@ -348,7 +348,7 @@ lowercase letter, and a number.
 placeholder="Confirm Password">
 <label for="confirm-password" class="form_label">Confirm Password</label>
 </div>
-<button type="submit" class="btn">Sign Up</button>
+<button type="button" class="btn" onclick="window.location.href='index.html'">Sign Up</button>
 </form>
 <p class="link">Already have an account? <a href="login.html">Login</a></p>
 <!-- ✅ Success Message -->
