--- a/app/public/CareConnect_AboutUs.HTML
+++ b/app/public/CareConnect_AboutUs.HTML
@@ -1,358 +1,413 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Us - Chatbot</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-<style>
-:root {
---bg-color: transparent;
---text-color: #333;
---accent-color: hsl(121, 54%, 16%);
---background-image: url('https://images.unsplash.com/photo-1624861234508-209e3b68d5e5?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-}
-[data-theme="light"] {
---bg-color: #121212;
---text-color: #14911e;
---accent-color: #00c896;
---background-image: none;
-background-color: #121212;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us - CareConnect</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --bg-color: transparent;
+      --text-color: #333;
+      --accent-color: hsl(121, 54%, 16%);
+      --background-image: url('https://images.unsplash.com/photo-1692183365525-d89941cfb4a5?q=80&w=2068&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    }
 
-html {
-scroll-behavior: smooth;
-}
-body {
-margin: 0;
-font-family: 'Arial', sans-serif;
-background: var(--background-image) no-repeat center center fixed;
-background-size: cover;
-background-attachment: fixed;
-color: var(--text-color);
-}
+    [data-theme="light"] {
+      --bg-color: #121212;
+      --text-color: #14911e;
+      --accent-color: #00c896;
+      --background-image: none;
+      background-color: #121212;
+    }
 
-/* Navbar */
-.navbar {
-  background-color: var(--accent-color);
-  padding: 20px 30px;
-  display: flex;
-  justify-content: flex-end; /* <-- shift all content to the right */
-  align-items: center;
-  gap: 70px; /* add some spacing between links and toggle */
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-.navbar-links {
-  display: flex;
-  gap: 40px;
-  align-items: center;
-}
-.navbar a {
-  color: rgb(21, 83, 31);
-  text-decoration: none;
-  font-weight: bold;
-}
-.navbar a:hover {
-  text-decoration: underline;
-}
-.toggle-switch {
-display: flex;
-align-items: center;
-}
-.toggle-switch input {
-height: 0;
-width: 0;
-visibility: hidden;
-}
-.toggle-switch label {
-cursor: pointer;
-text-indent: -9999px;
-width: 50px;
-height: 25px;
-background: grey;
-display: block;
-border-radius: 100px;
-position: relative;
-}
-.toggle-switch label:after {
-content: '';
-position: absolute;
-left: 5px;
-top: 5px;
-width: 15px;
-height: 15px;
-background: white;
-border-radius: 90px;
-transition: 0.3s;
-}
-.toggle-switch input:checked + label {
-background: #2ecc71;
-}
-.toggle-switch input:checked + label:after {
-left: calc(100% - 5px - 15px);
-}
+    html {
+      scroll-behavior: smooth;
+    }
 
-.social-icons {
-  margin-top: 10px;
-}
-.social-icons a {
-  color: var(--accent-color);
-  font-size: 22px;
-  margin: 0 8px;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-.social-icons a:hover {
-  color: #000; /* changes color slightly when hovering */
-}
+    body {
+      margin: 0;
+      font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+      background: var(--background-image) no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
+      color: var(--text-color);
+    }
 
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: var(--accent-color);
+      padding: 20px 30px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-/* Frosted glass background container */
-.glass-panel {
-  backdrop-filter: blur(5px);
-  background: rgba(255,255,255,0.2);
-  padding: 30px;
-  margin: 50px auto;
-  max-width: 900px;
-  border-radius: 15px;
-  text-align: center;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.2);
-  
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-  font-size: 1rem;
-  line-height: 1.6;
-  color: #333;
-}
+    .navbar-left {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
 
+    .navbar-right {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
 
-/* Chatbot Bubble */
-.chatbot-bubble {
-background: var(--accent-color);
-color: white;
-padding: 15px 20px;
-border-radius: 20px;
-margin: 40px auto 20px auto;
-text-align: center;
-width: fit-content;
-animation: slideIn 1s ease-out;
-}
-@keyframes slideIn {
-from { transform: translateY(-30px); opacity: 0; }
-to { transform: translateY(0); opacity: 1; }
-}
+    .logo {
+      height: 50px;
+      width: auto;
+    }
 
-h1, h2 {
-text-align: center;
-margin-top: 20px;
-}
-#auto-type {
-font-size: 20px;
-text-align: center;
-margin-bottom: 30px;
-min-height: 40px;
-}
+    .site-name {
+      font-size: 20px;
+      color: white;
+      font-weight: bold;
+    }
 
-/* Accordion Sections */
-section {
-padding: 50px 20px;
-max-width: 900px;
-margin: auto;
-text-align: center;
-}
-section h2 {
-margin-bottom: 15px;
-}
-section p {
-font-size: 18px;
-line-height: 1.6;
-}
+    .navbar a,
+    .navbar button {
+      text-decoration: none;
+      color: white;
+      font-size: 16px;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+    }
 
-/* Team Section */
-.team {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-gap: 30px;
-margin-top: 40px;
-padding-bottom: 60px;
-}
-.team-member {
-background-color: rgba(255,255,255,0.9);
-border-radius: 10px;
-width: 220px;
-padding: 20px;
-text-align: center;
-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-transition: transform 0.3s;
-cursor: pointer;
-}
-.team-member:hover {
-transform: translateY(-8px);
-}
-.team-member img {
-width: 100px;
-height: 100px;
-object-fit: cover;
-border-radius: 50%;
-margin-bottom: 10px;
-border: 3px solid var(--accent-color);
-}
-.team-member h3 {
-margin: 10px 0 5px;
-font-size: 20px;
-}
-.team-member p {
-font-size: 16px;
-color: #555;
-}
+    .navbar a:hover,
+    .navbar button:hover {
+      color: #a3b18a;
+    }
 
-@media (max-width: 600px) {
-.team {
-flex-direction: column;
-align-items: center;
-}
-.team-member {
-width: 90%;
-}
-}
-</style>
+    .toggle-switch {
+      display: flex;
+      align-items: center;
+    }
+
+    .toggle-switch input {
+      height: 0;
+      width: 0;
+      visibility: hidden;
+    }
+
+    .toggle-switch label {
+      cursor: pointer;
+      text-indent: -9999px;
+      width: 50px;
+      height: 25px;
+      background: grey;
+      display: block;
+      border-radius: 100px;
+      position: relative;
+    }
+
+    .toggle-switch label:after {
+      content: '';
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      width: 15px;
+      height: 15px;
+      background: white;
+      border-radius: 90px;
+      transition: 0.3s;
+    }
+
+    .toggle-switch input:checked + label {
+      background: #2ecc71;
+    }
+
+    .toggle-switch input:checked + label:after {
+      left: calc(100% - 5px - 15px);
+    }
+
+    .chatbot-bubble {
+      background: var(--accent-color);
+      color: white;
+      padding: 15px 20px;
+      border-radius: 20px;
+      margin: 40px auto 20px auto;
+      text-align: center;
+      width: fit-content;
+      animation: slideIn 1s ease-out;
+    }
+
+    @keyframes slideIn {
+      from {
+        transform: translateY(-30px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    h1, h2 {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    #auto-type {
+      font-size: 20px;
+      text-align: center;
+      margin-bottom: 30px;
+      min-height: 40px;
+    }
+
+    .glass-panel {
+      backdrop-filter: blur(5px);
+      background: rgba(255, 255, 255, 0.2);
+      padding: 30px;
+      margin: 50px auto;
+      max-width: 900px;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    section {
+      padding: 50px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+    }
+
+    section h2 {
+      margin-bottom: 15px;
+    }
+
+    section p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    .team {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 40px;
+      padding-bottom: 60px;
+    }
+
+    .team-member {
+      background-color: rgba(255, 255, 255, 0.9);
+      border-radius: 10px;
+      width: 220px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+      cursor: pointer;
+    }
+
+    .team-member:hover {
+      transform: translateY(-8px);
+    }
+
+    .team-member img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      border: 3px solid var(--accent-color);
+    }
+
+    .team-member h3 {
+      margin: 10px 0 5px;
+      font-size: 20px;
+    }
+
+    .team-member p {
+      font-size: 16px;
+      color: #555;
+    }
+
+    .social-icons {
+      margin-top: 10px;
+    }
+
+    .social-icons a {
+      color: var(--accent-color);
+      font-size: 22px;
+      margin: 0 8px;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: #000;
+    }
+
+    @media (max-width: 768px) {
+      .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .navbar-right {
+        flex-direction: column;
+        gap: 15px;
+        margin-top: 10px;
+      }
+
+      .team {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .team-member {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
 
 <body>
-
-<!-- Navigation Bar -->
-<div class="navbar">
-<div>
-    <a href="index.html">Home</a>
-    <a href="CareConnect_chat.html">Care Bot</a>
-    <a href="signin.html">Sign In/Up</a>
-</div>
-<div class="toggle-switch">
-<input type="checkbox" id="theme-toggle">
-<label for="theme-toggle">Toggle Theme</label>
-</div>
-</div>
-
-<!-- Chatbot Welcome -->
-<div class="chatbot-bubble">
-Hi there! Welcome to CareConnect.
-</div>
-
-<h1>About CareConnect</h1>
-<div id="auto-type"></div>
-
-<!-- Sections -->
-<!-- Sections with Glass Panels -->
-<div class="glass-panel" id="about">
-<h1>About Our Chatbot</h1>
-<div id="auto-type"></div>
-</div>
-
-<div class="glass-panel" id="mission">
-<h2>Our Mission</h2>
-<p>We aim to make technology more human, accessible, and helpful — every conversation, every time.</p>
-</div>
-
-<div class="glass-panel" id="vision">
-<h2>Our Vision</h2>
-<p>Imagine a world where you can obtain accurate, personalized medical information all from the palm of your hand. We are building that reality today!</p>
-</div>
-
-<div class="glass-panel" id="goals">
-<h2>Our Future Goals</h2>
-<p>At CareConnect, we’re working to make healthcare more personal, more accurate, and always secure. We’re committed to protecting your privacy and following HIPAA standards every step of the way.
-
-We imagine a world where you can easily share your medical records with us — safely — so we can give you care that's tailored just for you. Along with location access, we’ll help you find the right doctors nearby and connect you to pharmacies that have exactly what you need.
-
-CareConnect is the place you can trust. We're here to take care of you!</p>
-</div>
-
-<!-- Meet the Team -->
-<h2>Meet the Team</h2>
-<div class="team">
-    <div class="team-member">
-        <img src="https://via.placeholder.com/100" alt="Jabin Wade">
-        <h3>Jabin Wade</h3>
-        <h4>Team Lead</h4>
-        <p>Back-end Lead Developer</p>
-        
-    <div class="social-icons">
-        <a href="https://linkedin.com/in/jabinwade" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/jabinwade" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="mailto:someone@example.com"><i class="fas fa-envelope"></i></a>
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <div class="navbar-left">
+      <a href="index.html">
+        <img src="CareConnectImages/CareConnectLogo.png" alt="Care Connect Logo" class="logo" />
+      </a>
+      <span class="site-name">CareConnect</span>
     </div>
+    <div class="navbar-right">
+      <a href="index.html">Home</a>
+      <a href="CareConnect_chat.html">Carebot</a>
+      <a href="signup.html">Sign In/Up</a>
+      <div class="toggle-switch">
+        <input type="checkbox" id="theme-toggle" />
+        <label for="theme-toggle">Toggle Theme</label>
+      </div>
+    </div>
+  </div>
+
+  <!-- Chatbot Welcome -->
+  <div class="chatbot-bubble">Hello there! Welcome to CareConnect!</div>
+
+  <div id="auto-type"></div>
+
+  <!-- Sections -->
+  <div class="glass-panel" id="about">
+    <h1>About Our Chatbot</h1>
+    <p>
+      CareConnect is an AI-powered health assistant designed to help users better understand medical symptoms, conditions, and general health concerns. By using natural language processing, our chatbot engages in real-time conversation to provide clear explanations of medical terms, suggest potential causes of symptoms, and guide users toward appropriate next steps.
+    </p>
+    <p>
+      Whether you're a student researching a condition, a parent with questions about a child's symptoms, or someone just looking for trustworthy information, CareConnect offers accessible support—anytime, anywhere.
+    </p>
+    <p>
+      It’s important to note that CareConnect does <strong>not</strong> replace professional medical advice, diagnosis, or treatment. It is intended to complement—not substitute—the guidance of licensed healthcare providers.
+    </p>
+    <div id="auto-type"></div>
+  </div>
+
+  <div class="glass-panel" id="mission">
+    <h2>Our Mission</h2>
+    <p>We aim to make technology more human, accessible, and helpful — every conversation, every time.</p>
+  </div>
+
+  <div class="glass-panel" id="vision">
+    <h2>Our Vision</h2>
+    <p>Imagine a world where you can obtain accurate, personalized medical information all from the palm of your hand. We are building that reality today!</p>
+  </div>
+
+  <div class="glass-panel" id="goals">
+    <h2>Our Future Goals</h2>
+    <p>At CareConnect, we’re working to make healthcare more personal, more accurate, and always secure. We’re committed to protecting your privacy and following HIPAA standards every step of the way.</p>
+    <p>We imagine a world where you can easily share your medical records with us — safely — so we can give you care that's tailored just for you. Along with location access, we’ll help you find the right doctors nearby and connect you to pharmacies that have exactly what you need.</p>
+    <p>CareConnect is the place you can trust. We're here to take care of you!</p>
+  </div>
+
+  <!-- Meet the Team -->
+  <h2>Meet the Team</h2>
+  <div class="team">
+    <div class="team-member">
+      <img src="CareConnectImages/JabinWadeImg.jpeg" alt="Jabin Wade" />
+      <h3>Jabin Wade</h3>
+      <h4>Team Lead</h4>
+      <p>Lead Back-end Developer</p>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/jabin-wade/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/JdoubleU2" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:jabinwade03@gmail.com"><i class="fas fa-envelope"></i></a>
+      </div>
     </div>
 
     <div class="team-member">
-        <img src="CareConnectImages/AubreyLister.jpg" alt="Aubrey Lister">
-        <h3>Aubrey Lister</h3>
-        <p>Front-end Lead Developer</p>
-
-    <div class="social-icons">
+      <img src="CareConnectImages/AubreyLister.jpg" alt="Aubrey Lister" />
+      <h3>Aubrey Lister</h3>
+      <p>Lead Front-end Developer</p>
+      <div class="social-icons">
         <a href="https://linkedin.com/in/AubreyLister" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/AubreyLister" target="_blank"><i class="fab fa-github"></i></a>
         <a href="mailto:aubreyylisterr@gmail.com"><i class="fas fa-envelope"></i></a>
-    </div>
+      </div>
     </div>
 
     <div class="team-member">
-        <img src="CareConnectImages/ZeroNelsonImg.jpg" alt="Zero Nelson">
-        <h3>Zero Nelson</h3>
-        <p>Data Analyst</p>
-
-    <div class="social-icons">
+      <img src="CareConnectImages/ZeroNelsonImg.jpg" alt="Zero Nelson" />
+      <h3>Zero Nelson</h3>
+      <p>Data Analyst</p>
+      <div class="social-icons">
         <a href="https://linkedin.com/in/zeronelson" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://GitHub.com/zeronelson" target="_blank"><i class="fab fa-github"></i></a>
         <a href="mailto:someone@example.com"><i class="fas fa-envelope"></i></a>
-    </div>
+      </div>
     </div>
 
     <div class="team-member">
-        <img src="CareConnectImages/LindseyLittlejohnImg.jpeg" alt="Lindsey Littlejohn">
-        <h3>Lindsey Littlejohn</h3>
-        <p>Front-end Developer</p>
-
-    <div class="social-icons">
+      <img src="CareConnectImages/LindseyLittlejohnImg.jpeg" alt="Lindsey Littlejohn" />
+      <h3>Lindsey Littlejohn</h3>
+      <p>Front-end Developer</p>
+      <div class="social-icons">
         <a href="https://linkedin.com/in/LindseyLittlejohn" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/LindseyLittlejohn" target="_blank"><i class="fab fa-github"></i></a>
         <a href="mailto:someone@example.com"><i class="fas fa-envelope"></i></a>
+      </div>
     </div>
-    </div>
+  </div>
 
-<!-- JavaScript -->
-<script>
-// Auto Typing
-const text = "CareConnect makes conversations natural, informative, and friendly.";
-let index = 0;
-let isDeleting = false;
+  <!-- Auto typing script -->
+  <script>
+    const text = "CareConnect makes conversations natural, informative, and friendly.";
+    let index = 0;
+    let isDeleting = false;
 
-function typeEffect() {
-  const typingElement = document.getElementById("auto-type");
+    function typeEffect() {
+      const typingElement = document.getElementById("auto-type");
+      if (!typingElement) return;
 
-  if (!isDeleting) {
-    typingElement.innerHTML = text.substring(0, index + 1);
-    index++;
-    if (index === text.length) {
-      isDeleting = true;
-      setTimeout(typeEffect, 2000); // Wait before starting to delete
-      return;
+      if (!isDeleting) {
+        typingElement.innerHTML = text.substring(0, index + 1);
+        index++;
+        if (index === text.length) {
+          isDeleting = true;
+          setTimeout(typeEffect, 2000);
+          return;
+        }
+      } else {
+        typingElement.innerHTML = text.substring(0, index - 1);
+        index--;
+        if (index === 0) {
+          isDeleting = false;
+        }
+      }
+      setTimeout(typeEffect, isDeleting ? 30 : 50);
     }
-  } else {
-    typingElement.innerHTML = text.substring(0, index - 1);
-    index--;
-    if (index === 0) {
-      isDeleting = false;
-    }
-  }
-  setTimeout(typeEffect, isDeleting ? 30 : 50); // Faster delete speed
-}
 
-typeEffect();
-</script>
-
-
+    typeEffect();
+  </script>
 </body>
 </html>
